--- a/index.html
+++ b/index.html
@@ -1,39 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- This is a comment. Seen in code, but not in browser. -->
+    <!-- This content is hidden. For browser and search eng. -->
+    <!-- The head section contains info for search engines and the browser, and is not seen by site visitors... the non-tech visitors. -->
+
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script scr="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
+    <!-- The body is the entire viewable area of the web page. We can see text, links, images, and media. -->
     <header>
-      <!-- logo -->
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-
-      <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-      </nav>
+      <div id="logo">
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
+      </div>
+    <!-- links -->
+    <!-- a = anchor / action -->
+    <nav> <!-- the section that has navigation or links for the site-->
+        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a>
+    </nav>
     </header>
 
     <section id="featured-property">
-      <figure>
-        <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-        <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
-      </figure>
+        <figure>
+            <img src="images/intro-pic.jpg" alt="A picture of a motorcycle." title="Welcome to Exceptional Realty Group." width=650 height=400>
+            <figcaption>483 Carl Street Apt 1980, Carrol Rd. Brooklyn NY - Photo: Archive.org</figcaption>
+        </figure>
+        <!--
+        foldername/ =go inside folder.
+        filename = use a file in the current directory.
+        ../ = leave the current folder and go up the parent directory.
+        -->
 
-      <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+        <p> Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
 
     <section id="promotional">
-      <figure>
-        <video controls>
-          <source src="videos/real-estate.mp4" type="video/mp4"> 
-          <source src="videos/real-estate.ogv" type="video/ogg">
-          Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
-        </video>
-        <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
-      </figure>
+        <figure>
+            <video controls>
+                <source src="videos/real-estate.mp4" type="video/mp4">
+                <source src="videos/real-estate.mgv" type="video/ogg">
+                Your browser does not support HTML5 video. <a href="http://browshappy.com">Please upgrade your browser.</a>
+            </video>
+            <figcaption>Exceptional Realty Group Promotional Video - Source: Archive.org</figcaption>
+        </figure>
     </section>
 
     <section id="details">
@@ -71,7 +90,7 @@
     </section>
 
     <footer>
-      &copy; 2014 Exceptional Realty. All Rights Reserved.
+        &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
 
   </body>
