Fixed spacing on details section and contact page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
           email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
           phone: +1 710 555 1234
         </p>
+      </div>
+      <div>
         <h3>Correspondence</h3>
         <address>
           Exceptional Realty<br>
