--- a/market-report.html
+++ b/market-report.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
 
-  <section>
+  <section id="market-report">
     <h3>Market Report</h3>
     <table>
       <tr>
@@ -57,6 +57,8 @@
           email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
           phone: +1 710 555 1234
         </p>
+      </div>
+      <div>
         <h3>Correspondence</h3>
         <address>
           Exceptional Realty<br>
