--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,30 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE <!DOCTYPE html>
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
-  <header>
-    <div id="logo">
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-    </div>
+ <header>
+    <!-- logo -->
+    <h1>Exceptional</h1>
+    <h2>Realty</h2>
 
     <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listing</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
     </nav>
   </header>
 
-  <h3>Contact</h3>
-
-  <section>
-    <!-- Map -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6049.760881033193!2d-73.99517294629514!3d40.69863072747073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights!5e0!3m2!1sen!2sus!4v1393612605402" width="425" height="350" frameborder="0" style="border:0"></iframe>
+  <section id="map">
+    <!--Map -->  
+    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d24207.81357612685!2d-73.9594479!3d40.6744824!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1451335624699" width="425" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
   </section>
 
-
-  <section>
-    <!-- Contact Form -->
+  <section id="contact-form">
+    <!-- Contact form  --> 
     <form action="#" method="post">
       <label for="fullname">Name</label>
       <input type="text" id="fullname" name="fullname" placeholder="your name" required>
@@ -38,44 +37,43 @@
       <input type="submit" value="send">
     </form>
   </section>
-
-  <section id="details">
-      <div>
-        <h3>Contact</h3>
-        <p>
-          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-          phone: +1 710 555 1234
-        </p>
-        <h3>Correspondence</h3>
-        <address>
-          Exceptional Realty<br>
-          P.O.Box 5555<br>
-          Brooklyn, NY 11201
-        </address>
-      </div>
-
-      <div>
-        <h3>Links</h3>
-        <p>
-          <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Afordable Mortgages</a><br>
-          <a href="#" target="_blank">Professional Moving Crew</a>
-        </p>
-      </div>
-      
-      <div>
-        <h3>Follow</h3>
-        <p>
-          <a href="#" target="_blank">Youtube</a><br>
-          <a href="#" target="_blank">Facebook</a><br>
-          <a href="#" target="_blank">Twitter</a>
-        </p>
-      </div>
-    </section>
-
-    <footer>
-      &copy; 2014 Exceptional Realty. All Rights Reserved.
-    </footer>
   
+  <section id="details">
+    <div>
+      <h3>Contact</h3>
+      <p>
+        email: <a href="mailto:abc@gmail.com">abc@gmail.com</a> <br>
+        phone: +1 334 456 542
+      </p>
+      <h3>Correspondence</h3>
+      <address>
+        Exceptional Realty <br>
+        P.O.Box 5555<br>
+        Brooklyn 11216
+      </address>
+    </div>
+
+    <div>
+      <h3>Links</h3>
+      <p>
+        <a href="#" target="blank">Home Restoration</a>
+        <a href="#" target="blank">Affordable Mortgage</a>
+        <a href="#" target="blank">Professional Moving</a>
+      </p>
+    </div>
+
+    <div>
+      <h3>Follow</h3>
+      <p>
+        <a href="#" target="blank">Youtube</a>
+        <a href="#" target="blank">Facebook</a>
+        <a href="#" target="blank">Twitter</a>
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2015 Exceptional Realty. All rights reserved.
+  </footer>
 </body>
 </html>
