--- a/new-properties.html
+++ b/new-properties.html
@@ -1,62 +1,61 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE <!DOCTYPE html>
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
   <header>
-    <div id="logo">
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-    </div>
+    <!-- logo -->
+    <h1>Exceptional</h1>
+    <h2>Realty</h2>
 
     <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listing</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
     </nav>
   </header>
 
-  <section>
-    <h3>New Properties</h3>
+  <h3>New Properties</h3>
+  
+  <section id="details">
+    <div>
+      <h3>Contact</h3>
+      <p>
+        email: <a href="mailto:abc@gmail.com">abc@gmail.com</a> <br>
+        phone: +1 334 456 542
+      </p>
+      <h3>Correspondence</h3>
+      <address>
+        Exceptional Realty <br>
+        P.O.Box 5555<br>
+        Brooklyn 11216
+      </address>
+    </div>
+
+    <div>
+      <h3>Links</h3>
+      <p>
+        <a href="#" target="blank">Home Restoration</a>
+        <a href="#" target="blank">Affordable Mortgage</a>
+        <a href="#" target="blank">Professional Moving</a>
+      </p>
+    </div>
+
+    <div>
+      <h3>Follow</h3>
+      <p>
+        <a href="#" target="blank">Youtube</a>
+        <a href="#" target="blank">Facebook</a>
+        <a href="#" target="blank">Twitter</a>
+      </p>
+    </div>
   </section>
 
-  <section id="details">
-      <div>
-        <h3>Contact</h3>
-        <p>
-          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-          phone: +1 710 555 1234
-        </p>
-        <h3>Correspondence</h3>
-        <address>
-          Exceptional Realty<br>
-          P.O.Box 5555<br>
-          Brooklyn, NY 11201
-        </address>
-      </div>
-
-      <div>
-        <h3>Links</h3>
-        <p>
-          <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Afordable Mortgages</a><br>
-          <a href="#" target="_blank">Professional Moving Crew</a>
-        </p>
-      </div>
-      
-      <div>
-        <h3>Follow</h3>
-        <p>
-          <a href="#" target="_blank">Youtube</a><br>
-          <a href="#" target="_blank">Facebook</a><br>
-          <a href="#" target="_blank">Twitter</a>
-        </p>
-      </div>
-    </section>
-
-    <footer>
-      &copy; 2014 Exceptional Realty. All Rights Reserved.
-    </footer>
-  
+  <footer>
+    &copy; 2015 Exceptional Realty. All rights reserved.
+  </footer>
 </body>
 </html>
