--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -1,105 +1,122 @@
-<!doctype html>
+<!DOCTYPE <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+  <title>Exceptional Realty Group - Luxury Homes - Listing</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
   <header>
-    <div id="logo">
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-    </div>
+    <!-- logo -->
+    <h1>Exceptional</h1>
+    <h2>Realty</h2>
 
     <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listing</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
     </nav>
   </header>
-
-  <section>
-    <h3>Condos</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
-  </section>
-
-  <section>
-    <h3>Townhomes</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
-  </section>
-
-  <section>
-    <h3>Co-Ops</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
-  </section>
-
-  <h2>Featured Listings</h2>
-
-  <section>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
-  </section>
   
   <section>
+    <h3>Condos</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
+
+  <section>
+    <h3>Townhouses</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
+
+    <section>
+    <h3>Co-Ops</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
+
+  <h2 class="milk-text  another-class">Featured Listing</h2>
+
+  <section>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
+
+  <section id="listing">
     <h3>Property Archive</h3>
-    <h4>2014</h4>
-    <!-- unordered list -->
+    <h4>2015</h4>
     <ul>
-      <li>Dec</li>
-      <li>Nov</li>
-      <li>Oct
+      <li>December</li>
+      <li>November</li>
+      <li>October
         <ul>
           <li>17th</li>
-          <li>18th</li>
+          <li>18</li>
         </ul>
       </li>
     </ul>
-  <section>
-
-  <section>
     <h3>Popular Listings</h3>
-    <!-- ordered list -->
     <ol>
-      <li>348 Stockton St.</li>
-      <li>3742A Belevadere Rd.</li>
-      <li>41 Cleaton Ave.</li>
+      <li>133 Quan Tho 1</li>
+      <li>806 Nostrand Ave</li>
+      <li>833 Broadway</li>    
     </ol>
   </section>
 
   <section id="details">
-      <div>
-        <h3>Contact</h3>
-        <p>
-          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-          phone: +1 710 555 1234
-        </p>
-        <h3>Correspondence</h3>
-        <address>
-          Exceptional Realty<br>
-          P.O.Box 5555<br>
-          Brooklyn, NY 11201
-        </address>
-      </div>
+    <div>
+      <h3>Contact</h3>
+      <p>
+        email: <a href="mailto:abc@gmail.com">abc@gmail.com</a> <br>
+        phone: +1 334 456 542
+      </p>
+      <h3>Correspondence</h3>
+      <address>
+        Exceptional Realty <br>
+        P.O.Box 5555<br>
+        Brooklyn 11216
+      </address>
+    </div>
 
-      <div>
-        <h3>Links</h3>
-        <p>
-          <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Afordable Mortgages</a><br>
-          <a href="#" target="_blank">Professional Moving Crew</a>
-        </p>
-      </div>
-      
-      <div>
-        <h3>Follow</h3>
-        <p>
-          <a href="#" target="_blank">Youtube</a><br>
-          <a href="#" target="_blank">Facebook</a><br>
-          <a href="#" target="_blank">Twitter</a>
-        </p>
-      </div>
-    </section>
+    <div>
+      <h3>Links</h3>
+      <p>
+        <a href="#" target="blank">Home Restoration</a>
+        <a href="#" target="blank">Affordable Mortgage</a>
+        <a href="#" target="blank">Professional Moving</a>
+      </p>
+    </div>
 
-    <footer>
-      &copy; 2014 Exceptional Realty. All Rights Reserved.
-    </footer>
+    <div>
+      <h3>Follow</h3>
+      <p>
+        <a href="#" target="blank">Youtube</a>
+        <a href="#" target="blank">Facebook</a>
+        <a href="#" target="blank">Twitter</a>
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2015 Exceptional Realty. All rights reserved.
+  </footer>
 
 </body>
 </html>
