--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+
+    </script>
   </head>
   <body>
     <header>
@@ -76,7 +78,7 @@
     </section>
 
     <footer>
-      &copy; 2014 Exceptional Realty. All Rights Reserved.
+      &copy; 2015 Exceptional Realty. All Rights Reserved.
     </footer>
 
   </body>
