--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -1,60 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Listings</title>
-</head>
-<body>
-  <header>
-    <div id="logo">
+  <head>
+    <meta charset="utf-8">
+    <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+    </script>
+  </head>
+
+  <body>
+    <header>
       <h1>Exceptional</h1>
       <h2>Realty Group</h2>
-    </div>
+      <nav>
+      <!--  links -->
+        <a href="index.html">About</a>
+        <a href="new-properties.html">New Properties</a>
+        <a href="real-estate-listings.html">Listings</a>
+        <a href="market-report.html">Market Report</a>
+        <a href="contact.html">Contact</a>
+        <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      </nav>
+    </header>
 
-    <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-    </nav>
-  </header>
+    <section>
+      <h3>Condos</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
+    </section>
 
-  <section>
-    <h3>Condos</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
-  </section>
+    <section>
+      <h3>Townhomes</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
+    </section>
 
-  <section>
-    <h3>Townhomes</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
-  </section>
+    <section>
+      <h3>Co-Ops</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
+    </section>
 
-  <section>
-    <h3>Co-Ops</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
-  </section>
+    <h2 class="milk-text">Featured Listings</h2>
 
-  <h2>Featured Listings</h2>
+    <section>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+    </section>
 
-  <section>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
-  </section>
-  
-  <section>
-    <h3>Property Archive</h3>
+  <h3>Property Archive</h3>
+  <section id="property-archive">
     <h4>2014</h4>
     <!-- unordered list -->
     <ul>
-      <li>Dec</li>
-      <li>Nov</li>
-      <li>Oct
-        <ul>
-          <li>17th</li>
-          <li>18th</li>
-        </ul>
-      </li>
+    <li>Dec</li>
+    <li>Nov</li>
+    <li>Oct
+      <ul>
+        <li>17th</li>
+        <li>18th</li>
+      </ul>
+    </li>
     </ul>
-  <section>
-
-  <section>
-    <h3>Popular Listings</h3>
+  </section>
+  <h3>Popular Listings</h3>
+  <section id="popular-listings">
     <!-- ordered list -->
     <ol>
       <li>348 Stockton St.</li>
@@ -86,7 +93,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -97,9 +104,9 @@
       </div>
     </section>
 
-    <footer>
-      &copy; 2014 Exceptional Realty. All Rights Reserved.
-    </footer>
+  <footer>
+  &copy; 2014 Exceptional Realty.  All Rights Reserved.
+  </footer>
 
-</body>
+  </body>
 </html>
