--- a/market-report.html
+++ b/market-report.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
 </head>
-<body>
+
+<body> 
   <header>
     <div id="logo">
       <h1>Exceptional</h1>
