--- a/market-report.html
+++ b/market-report.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+  <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.0.0/normalize.min.css">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizer/2.7.1/modernier.min.js"></script>
 </head>
 <body>
   <header>
