--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+      </script>
 </head>
 <body>
   <header>
@@ -30,6 +34,8 @@
     <h3>Co-Ops</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
   </section>
+  
+  <h2 class="milk-text">Featued Listings</h2>
 
   <h2>Featured Listings</h2>
 
