--- a/market-report.html
+++ b/market-report.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <script scr="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
   </script>
 </head>
