--- a/market-report.html
+++ b/market-report.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="style.css"
-  <script scr="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"</script>
+  <link rel="stylesheet" href="style.css">
+  <script scr="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+  </script>
 </head>
 <body>
   <header>
