--- a/market-report.html
+++ b/market-report.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
 </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css"> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+    </script>
 <body>
   <header>
     <div id="logo">
