commiting style links for all web pages

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <title>Exceptional Realty Group - Luxury Homes - About</title>
 
 
+    <!--- add normalize.css --->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 
+    <link rel="stylesheet" href="CSS/style.css">
 
-      
-    </style>
+    <!--- add modernizer --->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+
+    </script>
+
+  </style>
   </head>
   <body>
     <header>
