created CSS folder with style.css file, added link to CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <link rel="stlylesheet" href="CSS/style.css"
   </head>
   <body>
     <header>
@@ -50,7 +51,6 @@
           Brooklyn, NY 11201
         </address>
       </div>
-
       <div>
         <h3>Links</h3>
         <p>
