added comments for what normalize and modernizr help with

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link rel="stlylesheet" href="CSS/style.css">
+    <!--normalize below: for cross browser consistency -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
       
   </head>
@@ -75,6 +76,7 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
+<!--modernizr below - detects HTML5 and CSS3 features in the user’s browser -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"> </script>
   </body>
 </html>
