added link to CSS stylesheet to market-report.html, new-properties.html, real-estate-listings.html

--- a/market-report.html
+++ b/market-report.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+  <link rel="stlylesheet" href="CSS/style.css">
+    <!--normalize below: for cross browser consistency -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+      
 </head>
 <body>
   <header>
