added links to modernizr and normalize to market-report.html, new-properties.html, real-estate-listings.html

--- a/market-report.html
+++ b/market-report.html
@@ -87,6 +87,7 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+  <!--modernizr below - detects HTML5 and CSS3 features in the user’s browser -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"> </script>
 </body>
 </html>
