fixed spelling error for stylesheet

--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
-    <link rel="stlylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../CSS-Styling-v-000/CSS/style.css">
     <!--normalize below: for cross browser consistency -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 </head>
