--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+    <link href="https://fonts.googleapis.com/css?family=Clicker+Script|Elsie+Swash+Caps" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header id="logo">
       <!-- logo -->
       <h1>Exceptional</h1>
       <h2>Realty Group</h2>
