--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   </head>
   <body>
     <header>
-      <!-- logo -->
+<div class='wrapper'>
+  <img src='./images/intro-pic.jpg' class='sliding-background'>
+
+  </div>
+</div>
       <h1>Exceptional</h1>
       <h2>Realty Group</h2>
 
